--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   },
   "dependencies": {
     "bytes": "^2.0.0",
-    "express": "^3.20.2"
+    "express": "^3.20.2",
+    "mongodb": "^2.1.8",
+    "path": "^0.12.7",
+    "querystring": "^0.2.0",
+    "url": "^0.11.0"
   }
 }
