--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "multipleFileUploadWithExpressJS",
+  "name": "file_upload",
   "version": "0.0.1",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
-    "bytes": "^2.0.0",
-    "express": "^3.20.2",
-    "mongodb": "^2.1.8",
-    "path": "^0.12.7",
-    "querystring": "^0.2.0",
-    "url": "^0.11.0"
+    "body-parser": "^1.14.2",
+    "express": "4.13.3",
+    "multer": "1.1.0"
+  },
+  "devDependencies": {
+    "should": "~7.1.0",
+    "mocha": "~2.3.3",
+    "supertest": "~1.1.0"
   }
 }
