--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": "4.13.3",
     "mongodb": "^2.1.18",
     "mongoose": "^4.5.3",
-    "multer": "1.1.0"
+    "multer": "1.1.0",
+    "socket.io":"1.4.5"
   },
   "devDependencies": {
     "should": "~7.1.0",
