--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "express": "4.13.3",
+    "mkdirp": "^0.5.1",
     "mongodb": "^2.1.18",
     "mongoose": "^4.5.3",
     "multer": "1.1.0",
