--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express-handlebars": "^2.0.1",
     "lodash": "^3.10.1",
     "opencv": "^5.0.0",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.4.8",
+    "leaflet":"1.0.0-rc.3",
+    "leaflet.markercluster":"1.0.0-rc.1.0 "
   },
   "devDependencies": {
     "should": "~7.1.0",
